--- a/blendify/src/Views/SignInView/SignInView.css
+++ b/blendify/src/Views/SignInView/SignInView.css
@@ -11,7 +11,7 @@
 }
 
 
-body {
+.signin-view-wrapper {
     font-family: 'Arial', sans-serif;
     background-color: #121212;
     background-image: 
